--- a/templates/emp_detail.html
+++ b/templates/emp_detail.html
@@ -59,9 +59,9 @@
     <div class="container">
         <h1>Employ Details</h1>
         <div class="student-details">
-            <div class="detail"><strong>Name:</strong> {{ emp.name }}</div>
+            <div class="detail"><strong>FIO:</strong> {{ emp.name }}</div>
             <div class="detail"><strong>Email:</strong> {{ emp.email }}</div>
-            <div class="detail"><strong>Phone Number:</strong> {{ emp.phone_number }}</div>
+            <div class="detail"><strong>Telefon raqami:</strong> {{ emp.phone_number }}</div>
             <div class="detail"><strong>Designation:</strong> {{ emp.designation }}</div>
             <div class="detail"><strong>Authorized:</strong> {% if emp.authorized %} Yes {% else %} No {% endif %}</div>
         </div>
