--- a/templates/home.html
+++ b/templates/home.html
@@ -174,36 +174,36 @@
 <body>
     <div class="sidebar">
         <h2>AI Dashboard</h2>
-        <a href="{% url 'register_employee' %}"><i class="fas fa-user-plus"></i> Employee Registration</a>
-        <a href="{% url 'employee-list' %}"><i class="fas fa-user-friends"></i> View Employee</a>
-        <a href="{% url 'capture_and_recognize' %}"><i class="fas fa-camera"></i> Mark Attendance</a>
-        <a href="{% url 'emp_attendance_list' %}"><i class="fas fa-list"></i> Attendance Details</a>
-        <a href="{% url 'camera_config_list' %}"><i class="fas fa-cog"></i> Camera Configuration</a>
+        <a href="{% url 'register_employee' %}"><i class="fas fa-user-plus"></i> Ro'yxatdan o'tkazish</a>
+        <a href="{% url 'employee-list' %}"><i class="fas fa-user-friends"></i> Hodimlar</a>
+        <a href="{% url 'capture_and_recognize' %}"><i class="fas fa-camera"></i> Davomat</a>
+        <a href="{% url 'emp_attendance_list' %}"><i class="fas fa-list"></i> Davomatni ko'rish</a>
+        <a href="{% url 'camera_config_list' %}"><i class="fas fa-cog"></i> Kamera sozlamalari</a>
     </div>
     <div class="main-content">
         <div class="hero-section">
-            <h1>Face Based Employee Attendance System</h1>
-            <p>Register Employee, manage attendance, and integrate AI for seamless recognition.</p>
+            <h1>Hodimlar uchun Davomat</h1>
+{#            <p>.</p>#}
             <div class="buttons">
                 <div class="card">
                     <a href="{% url 'register_employee' %}"><i class="fas fa-user-plus"></i></a>
-                    <p>Register Employee</p>
+                    <p>Yangi hodim</p>
                 </div>
                 <div class="card">
                     <a href="{% url 'employee-list' %}"><i class="fas fa-user-friends"></i></a>
-                    <p>Authorize Employee</p>
+                    <p>Hodimlar</p>
                 </div>
                 <div class="card">
                     <a href="{% url 'capture_and_recognize' %}"><i class="fas fa-camera"></i></a>
-                    <p>Mark Attendance</p>
+                    <p>Davomat</p>
                 </div>
                 <div class="card">
                     <a href="{% url 'emp_attendance_list' %}"><i class="fas fa-list"></i></a>
-                    <p>View Attendance</p>
+                    <p>Davomatni ko'rish</p>
                 </div>
                 <div class="card">
                     <a href="{% url 'camera_config_create' %}"><i class="fas fa-cog"></i></a>
-                    <p>Configure Camera</p>
+                    <p>Kamerani sozlash</p>
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
 
 
     <footer>
-        <p>Developed by ApyCoder | <a href="https://apycoder.com">Visit our website</a></p>
+        <p>it-media | <a href="https://it-media.uz">saytga tashrif buyuring</a></p>
     </footer>
 </body>
 </html>
