--- a/templates/register_employee.html
+++ b/templates/register_employee.html
@@ -136,7 +136,7 @@
                             <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="employee_id">Employee ID:</label>
+                            <label for="employee_id">HODIM ID:</label>
                             <input type="text" class="form-control" id="employee_id" name="employee_id" required>
                         </div>
                     </div>
@@ -145,34 +145,34 @@
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="phone_number">Phone Number:</label>
+                        <label for="phone_number">Telefon nomer:</label>
                         <input type="text" class="form-control" id="phone_number" name="phone_number" required>
                     </div>
                     <div class="form-group">
-                        <label for="designation">Designation:</label>
+                        <label for="designation">Ish haqi(soatiga):</label>
                         <input type="text" class="form-control" id="designation" name="designation" required>
                     </div>
                     <div class="form-group">
-                        <label for="department">Department:</label>
+                        <label for="department">Filial:</label>
                         <input type="text" class="form-control" id="department" name="department" required>
                     </div>
                     <div class="form-group">
-                        <label for="imageUpload">Upload Image:</label>
+                        <label for="imageUpload">Rasm yuklash:</label>
                         <input type="file" class="form-control" id="imageUpload" name="image_file" accept="image/*" required>
                     </div>
                     <img id="imagePreview" class="image-preview" src="" alt="Selected Image Preview" style="display: none;" />
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-success" id="submitBtn">Submit Registration</button>
+                        <button type="submit" class="btn btn-success" id="submitBtn">Tasdiqlash</button>
                     </div>
                     <div class="back-button" onclick="location.href='{% url 'home' %}'">
-                        <i class="fas fa-home"></i> Back to Home
+                        <i class="fas fa-home"></i> Ortga qaytish
                     </div>
                 </form>
-                <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                </div>
+{#                <div class="social-icons">#}
+{#                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>#}
+{#                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>#}
+{#                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>#}
+{#                </div>#}
             </div>
         </div>
     </div>
