--- a/templates/camera_config_form.html
+++ b/templates/camera_config_form.html
@@ -138,7 +138,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h1>{{ config.name|default:"Create Camera Configuration" }}</h1>
+        <h1>{{ config.name|default:"Yangi kamera qo'shish" }}</h1>
         
         <!-- Display messages here -->
         {% for message in messages %}
@@ -150,19 +150,19 @@
         <form method="POST">
             {% csrf_token %}
             
-            <label for="name">Camera Name:</label>
-            <input type="text" id="name" name="name" value="{{ config.name|default:'' }}" placeholder="Enter camera name" required>
+            <label for="name">Kamera nomi:</label>
+            <input type="text" id="name" name="name" value="{{ config.name|default:'' }}" placeholder="Kamera nomini kiriting" required>
             
-            <label for="camera_source">Camera Source:</label>
-            <input type="text" id="camera_source" name="camera_source" value="{{ config.camera_source|default:'' }}" placeholder="Enter 0 for default or IP camera URL (e.g., http://10.129.101.122:4747/video)" required>
+            <label for="camera_source">Kamera manzili:</label>
+            <input type="text" id="camera_source" name="camera_source" value="{{ config.camera_source|default:'' }}" placeholder="0 yoki IP camera uchun URL (e.g., http://10.129.101.122:4747/video)" required>
             
-            <label for="threshold">Threshold:</label>
+            <label for="threshold">Aniqlik:</label>
             <input type="number" step="0.01" id="threshold" name="threshold" value="{{ config.threshold|default:0.6 }}" placeholder="Enter threshold value (0.0 to 1.0)" required>
-            <button type="submit">Save</button>
+            <button type="submit">Saqlash</button>
         </form>
         
-        <button class="nav-button" onclick="location.href='{% url 'camera_config_list' %}'">Back to List</button>
-        <button class="nav-button" onclick="location.href='{% url 'home' %}'">Back to Home</button>
+        <button class="nav-button" onclick="location.href='{% url 'camera_config_list' %}'">Kameralar ro'yxati</button>
+        <button class="nav-button" onclick="location.href='{% url 'home' %}'">Bosh sahifa</button>
     </div>
 </body>
 </html>
