--- a/templates/camera_config_list.html
+++ b/templates/camera_config_list.html
@@ -117,15 +117,15 @@
 <body>
 
     <div class="container">
-        <h1>Saved Camera Configurations</h1>
+        <h1>Kameralar ro'yxati</h1>
 
         <table>
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Camera Source</th>
-                    <th>Threshold</th>
-                    <th>Actions</th>
+                    <th>Nomi</th>
+                    <th>Manzili</th>
+                    <th>Aniqligi</th>
+                    <th>Buyruqlar</th>
                 </tr>
             </thead>
             <tbody>
@@ -135,16 +135,16 @@
                     <td>{{ config.camera_source }}</td>
                     <td>{{ config.threshold }}</td>
                     <td>
-                        <a href="{% url 'camera_config_update' config.id %}" style="color: #FFD700;">Edit</a> |
-                        <a href="{% url 'camera_config_delete' config.id %}" style="color: #FFD700;">Delete</a>
+                        <a href="{% url 'camera_config_update' config.id %}" style="color: #FFD700;">Tahrirlash</a> |
+                        <a href="{% url 'camera_config_delete' config.id %}" style="color: #FFD700;">O'chirish</a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
 
-        <a href="{% url 'camera_config_create' %}" class="create-new-btn">Create New Configuration</a>
-        <a href="{% url 'home' %}" class="back-home-btn">Back to Home</a> <!-- New Back to Home button -->
+        <a href="{% url 'camera_config_create' %}" class="create-new-btn">Yangi qo'shish</a>
+        <a href="{% url 'home' %}" class="back-home-btn">Bosh sahifa</a> <!-- New Back to Home button -->
     </div>
 
 </body>
